--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # TODO : fix windows problem
         #os: [ubuntu-latest, windows-latest]
         os: [ubuntu-latest]
         python: [3.6, 3.7, 3.8, 3.9]
